# FragmentFusion

./: .dockerignore  .gitignore  ACTION_PLAN.md  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
scripts/: docker_utils.py
scripts/data_collection/: config.yaml
scripts/data_collection/ena/: download_ena_cfdna.py
scripts/data_collection/ncbi/: download_ncbi_cfdna.py
src/fragment_fusion/: __init__.py
workflows/: README.md  Snakefile  config.yaml
workflows/cfdna_processing/: Snakefile
workflows/common/: utils.smk
workflows/transformer_training/: Snakefile
